feat: support connecting devices without mDNS
* Allow to specify device URL manually.
* Don't make the Device resource refer to a DeviceDiscovery resource but specify the server URL directly - to make the join and connect process independent of mDNS (which may not work in some environments, e.g. due to firewall).
